# monday-item-parser

./: README.md  pyproject.toml
.github/workflows/: deploy_pypi.yml  tests.yml
monday_item_parser/: __init__.py  exceptions.py  helpers.py  item.py
monday_item_parser/fields/: __init__.py  checkbox.py  country.py  date.py  dropdown.py  email.py  field.py  helpers.py  link.py  location.py  mirror.py  number.py  people.py  phone.py  status.py  tags.py  text.py  timeline.py
tests/: helpers.py  test_item.py
