[tool.poetry]
name = "monday-item-parser"
version = "0.1.0"
description = ""
authors = ["Aviv Atedgi <aviv.atedgi2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
monday = "^1.2.7"
bidict = "^0.21.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
