[tool.poetry]
name = "monday-item-parser"
version = "0.2.0"
description = "monday-item-parser is a library used to define Monday items structure in a specific board, and lets the user fetch, create, update and delete items from this board."
readme = "README.md"
authors = ["Aviv Atedgi <aviv.atedgi2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
monday = "^1.2.7"
bidict = "^0.21.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
